--- a/html/index.html
+++ b/html/index.html
@@ -19,14 +19,14 @@
         <!-- custom fonts -->
 <script src="https://use.fontawesome.com/e7e642c86e.js"></script>
         <!-- favicon -->
-<link rel="icon" type="images/favicon.png" href="favicon.png">
+<link rel="icon" type="images/favicon.png" href="images/favicon.png">
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <!-- custom cSS -->
         <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-default navbar-inverse">
+            <nav class="navbar navbar-default navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -36,16 +36,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#"><h1>Brand</h1></a>
+      <a class="navbar-brand" href="#"><h1>Sky Travel</h1></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
+        <li class="active"><a href="#">TEAM <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">CONTACT</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+<!--           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a> -->
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
@@ -81,12 +81,12 @@
 </nav>
             <h1><a class="navbar-brand" href="#"><h1>Sky Travel</h1></a></h1>
             <!-- nav -->
-            <nav>
+<!--             <nav>
                 <ul class="nav navbar-nav">
                     <li><a href="#team">TEAM</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
-            </nav>
+            </nav> -->
 
             <!-- carousel -->
             <div class="business-header">
@@ -150,17 +150,28 @@
 
         <!-- services section -->
         <section id="services">
+            <div  class="container">
+                <div class="row">
+                    <div class="col-xs-12 col-md-12">
             <h2 class="section-heading">WELCOME TO SKY TRAVEL'S SITE</h2>
             <h3 class="section-subheading text-muted">あなたにぴったりの旅行プランの実現をサポート！</h3>
-
+            </div>
+</div>
+                <div class="row">
+                                        <div class="col-xs-4 col-md-4">
             <img src="images/top01.jpg" alt="一番人気ハワイ6日間">
             <h4 class="ection-subheading">一番人気 ハワイ6日間 <br><span class="price">￥98,800～</span></h4>
-
+            </div>
+                    <div class="col-xs-4 col-md-4">
             <img src="images/top02.jpg" alt="一情熱都市 香港 4日間">
             <h4 class="ection-subheading">情熱都市 香港 4日間 <br><span class="price">￥44,700～</span></h4>
-
+            </div>
+                    <div class="col-xs-4 col-md-4">
             <img src="images/top03.jpg" alt=">世界遺産 マチュピチュ7日間">
             <h4 class="ection-subheading">世界遺産 マチュピチュ7日間 <br><span class="price">￥240,000～</span></h4>
+            </div>
+            </div>
+            </div>
         </section>
 
         <!-- team section -->
