--- a/html/index.html
+++ b/html/index.html
@@ -97,36 +97,38 @@
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
     <li data-target="#carousel-example-generic" data-slide-to="1"></li>
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="4"></li>
   </ol>
 
   <!-- Wrapper for slides -->
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="images/slide01.jpg" alt="1">
+      <img src="images/slide01.jpg" alt="0">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="images/slide02.jpg" alt="2">
+      <img src="images/slide02.jpg" alt="1">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="images/slide03.jpg" alt="3">
+      <img src="images/slide03.jpg" alt="2">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="images/slide04.jpg" alt="4">
+      <img src="images/slide04.jpg" alt="3">
       <div class="carousel-caption">
         ...
       </div>
     </div>
     <div class="item">
-      <img src="images/slide05.jpg" alt="5">
+      <img src="images/slide05.jpg" alt="4">
       <div class="carousel-caption">
         ...
       </div>
@@ -159,28 +161,37 @@
 </div>
                 <div class="row">
                                         <div class="col-xs-4 col-md-4">
-            <img src="images/top01.jpg" alt="一番人気ハワイ6日間">
+            <img src="images/top01.jpg" alt="一番人気ハワイ6日間"  class="img-thumbnail">
             <h4 class="ection-subheading">一番人気 ハワイ6日間 <br><span class="price">￥98,800～</span></h4>
+            <a href="#" class="btn btn-success">詳しく見る</a>
             </div>
                     <div class="col-xs-4 col-md-4">
-            <img src="images/top02.jpg" alt="一情熱都市 香港 4日間">
+            <img src="images/top02.jpg" alt="一情熱都市 香港 4日間"  class="img-thumbnail">
             <h4 class="ection-subheading">情熱都市 香港 4日間 <br><span class="price">￥44,700～</span></h4>
+            <a href="#" class="btn btn-success">詳しく見る</a>
             </div>
                     <div class="col-xs-4 col-md-4">
-            <img src="images/top03.jpg" alt=">世界遺産 マチュピチュ7日間">
+            <img src="images/top03.jpg" alt=">世界遺産 マチュピチュ7日間"  class="img-thumbnail">
             <h4 class="ection-subheading">世界遺産 マチュピチュ7日間 <br><span class="price">￥240,000～</span></h4>
+            <a href="#" class="btn btn-success">詳しく見る</a>
             </div>
             </div>
             </div>
         </section>
 
         <!-- team section -->
-        <section id="team" class="bg-light-gray">
-            <h2 class="section-heading">Our Team</h2>
-            <h3 class="section-subheading text-muted">楽しい旅のご提案は私たちにおまかせください</h3>
-
-                <!-- staff_a -->
-                <img src="images/staff_a.jpg" alt="渋谷坂　沙由里">
+<section id="team" class="bg-light-gray">
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-md-12">
+                <h2 class="section-heading">Our Team</h2>
+                <h3 class="section-subheading text-muted">楽しい旅のご提案は私たちにおまかせください</h3>
+            </div>
+        </div>
+        <div class="row">
+            <!-- staff_a -->
+            <div class="col-xs-4 col-md-4">
+                <img src="images/staff_a.jpg" alt="渋谷坂　沙由里" class="img-responsive img-circle img-thumbnail">
                 <h4>渋谷坂　沙由里</h4>
                 <p class="text-muted">イチオシスポット：ロサンジェルス</p>
                 <ul class="list-inline social-buttons">
@@ -209,8 +220,10 @@
                         </a>
                     </li>
                 </ul>
-                <!-- staff_b -->
-                <img src="images/staff_b.jpg" alt="陣ノ内　美晴">
+            </div>
+            <!-- staff_b -->
+            <div class="col-xs-4 col-md-4">
+                <img src="images/staff_b.jpg" alt="陣ノ内　美晴" class="img-responsive img-circle img-thumbnail">
                 <h4>陣ノ内　美晴</h4>
                 <p class="text-muted">イチオシスポット：ベネチア</p>
                 <ul class="list-inline social-buttons">
@@ -239,8 +252,10 @@
                         </a>
                     </li>
                 </ul>
-                <!-- staff_c -->
-                <img src="images/staff_c.jpg" alt="リカード・サルミエント">
+            </div>
+            <!-- staff_c -->
+            <div class="col-xs-4 col-md-4">
+                <img src="images/staff_c.jpg" alt="リカード・サルミエント" class="img-responsive img-circle img-thumbnail">
                 <h4>リカード・サルミエント</h4>
                 <p class="text-muted">イチオシスポット：ボホール島</p>
                 <ul class="list-inline social-buttons">
@@ -269,9 +284,14 @@
                         </a>
                     </li>
                 </ul>
-            <p class="large text-muted">お客様の温かい笑顔にお会いできる喜びが私たちのパワーの源です。今後も常にお客様の立場に立った、お客様の笑顔であふれる旅行代理店を目指していきたいと思います。</p>
-        </section>
-
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-12">
+                    <p class="large text-muted">お客様の温かい笑顔にお会いできる喜びが私たちのパワーの源です。今後も常にお客様の立場に立った、お客様の笑顔であふれる旅行代理店を目指していきたいと思います。</p>
+                </div>
+            </div>
+</div>
+</section>
         <!-- contact Section -->
         <section id="contact">
             <h2 class="section-heading">CONTACT US</h2>
