--- a/html/index.html
+++ b/html/index.html
@@ -299,29 +299,29 @@
             </div>
             <!-- form 挿入 -->
             <div class="row">
-                <div class="col-xs-6 col-md-6">
+                <div class="col-xs-12 col-md-6">
                     <form>
                         <div class="form-group">
-   <label for="exampleInputName2"></label>
-    <input type="text" class="form-control" id="exampleInputName2" placeholder="お名前*">
+                            <label for="exampleInputName2"></label>
+                            <input type="text" class="form-control" id="exampleInputName2" placeholder="お名前*">
                         </div>
                         <div class="form-group">
-    <label for="exampleInputEmail1"></label>
-    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Eメール*">
+                            <label for="exampleInputEmail1"></label>
+                            <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Eメール*">
                         </div>
                         <div class="form-group">
-    <label for="exampleInputEmail1"></label>
-    <input type="tel" class="form-control" id="exampleInputEmail1" placeholder="電話番号*">
+                            <label for="exampleInputEmail1"></label>
+                            <input type="tel" class="form-control" id="exampleInputEmail1" placeholder="電話番号*">
                         </div>
                     </form>
                 </div>
-                <div class="col-xs-6 col-md-6">
-                    <textarea class="form-control" rows="13" placeholder="お問い合わせ内容*"></textarea>
+                <div class="col-xs-12 col-md-6">
+                    <textarea class="form-control" rows="3" placeholder="お問い合わせ内容*"></textarea>
                 </div>
-                            </div>
+            </div>
             <div class="row">
                 <div class="col-xs-12 col-md-12">
-                      <button type="submit" class="btn-xl btn btn-primary">送信</button>
+                    <button type="submit" class="btn-xl btn btn-primary">送信</button>
                 </div>
             </div>
         </div>
@@ -329,42 +329,41 @@
     <!-- map -->
     <section id="map" class="map">
         <!-- GoogleMap 挿入 -->
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.9723129743497!2d139.6979329154857!3d35.702298936423176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d2f6cba44df%3A0x18b3bc4c95b9f078!2z44CSMTY5LTAwNzMg5p2x5Lqs6YO95paw5a6_5Yy655m-5Lq655S677yS5LiB55uu77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1513836479488" width="800" height="650" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3239.9723129743497!2d139.6979329154857!3d35.702298936423176!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188d2f6cba44df%3A0x18b3bc4c95b9f078!2z44CSMTY5LTAwNzMg5p2x5Lqs6YO95paw5a6_5Yy655m-5Lq655S677yS5LiB55uu77yU4oiS77yY!5e0!3m2!1sja!2sjp!4v1513836479488" width="100%" height="100%" frameborder="0" style="border:0" allowfullscreen></iframe>
     </section>
     <!-- footer -->
     <footer>
-                <div class="container">
+        <div class="container">
             <div class="row">
                 <div class="col-xs-12 col-md-12">
-        <h2 class="section-heading">Sky Travel</h2>
-        <p>東京都新宿区百人町２丁目４−８</p>
-        <ul class="list-unstyled">
-            <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
-            <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:info@sky-travel.com">info@sky-travel.com</a>
-            </li>
-        </ul>
-        <br>
-        <ul class="list-inline">
-            <li>
-                <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
-            </li>
-        </ul>
+                    <h2 class="section-heading">Sky Travel</h2>
+                    <p>東京都新宿区百人町２丁目４−８</p>
+                    <ul class="list-unstyled">
+                        <li><i class="fa fa-phone fa-fw"></i> (123) 456-7890</li>
+                        <li><i class="fa fa-envelope-o fa-fw"></i> <a href="mailto:info@sky-travel.com">info@sky-travel.com</a>
+                        </li>
+                    </ul>
+                    <br>
+                    <ul class="list-inline">
+                        <li>
+                            <a href="#"><i class="fa fa-facebook fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-twitter fa-fw fa-3x"></i></a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-instagram fa-fw fa-3x"></i></a>
+                        </li>
+                    </ul>
                 </div>
-                                </div>
-                                            <div class="row">
-                                <div class="col-xs-12 col-md-12">
-        <hr class="small">
-        <p class="text-muted">Copyright &copy; Sky Travel</p>
-                                        </div>
-                                         </div>
-                                          </div>
-
+            </div>
+            <div class="row">
+                <div class="col-xs-12 col-md-12">
+                    <hr class="small">
+                    <p class="text-muted">Copyright &copy; Sky Travel</p>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- Theme JavaScript -->
 </body>
