--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
     <!-- custom fonts -->
     <script src="https://use.fontawesome.com/e7e642c86e.js"></script>
     <!-- favicon -->
@@ -106,7 +106,7 @@
     </header>
     <!-- services section -->
     <section id="services">
-        <div class="container">
+        <div class="container text-center">
             <div class="row">
                 <div class="col-xs-12 col-md-12">
                     <h2 class="section-heading">WELCOME TO SKY TRAVEL'S SITE</h2>
@@ -283,9 +283,7 @@
     </section>
     <!-- footer -->
     <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12 col-md-12">
+        <div class="container text-center">
                     <h2 class="section-heading">Sky Travel</h2>
                     <p>東京都新宿区百人町２丁目４−８</p>
                     <ul class="list-unstyled">
@@ -314,6 +312,55 @@
                 </div>
             </div>
         </div>
+    <!-- panda -->
+    <div class="container">
+            <div id="carousel-panda" class="carousel slide hidden-xs" data-ride="carousel">
+                <!-- Indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-panda" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-panda" data-slide-to="1"></li>
+                    <li data-target="#carousel-panda" data-slide-to="2"></li>
+                    <li data-target="#carousel-panda" data-slide-to="3"></li>
+                </ol>
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                        <img src="images/panda01.png" alt="0">
+                        <div class="carousel-caption">
+                            ...
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/panda02.png" alt="1">
+                        <div class="carousel-caption">
+                            ...
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/panda03.png" alt="2">
+                        <div class="carousel-caption">
+                            ...
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="images/panda04.png" alt="3">
+                        <div class="carousel-caption">
+                            ...
+                        </div>
+                    </div>
+                </div>
+                <!-- Controls -->
+                <a class="left carousel-control" href="#carousel-panda" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+                <a class="right carousel-control" href="#carousel-panda" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+            </div>
+        </div>
+    </div>
     </footer>
     <!-- Theme JavaScript -->
 </body>
